removed unwanted spacing for data-block ,fixed heading block fontsize issues and removed un used code

--- a/src/blocks/row-layout/editor.scss
+++ b/src/blocks/row-layout/editor.scss
@@ -1653,6 +1653,7 @@ button.components-button.amp-fluid-grid-btn.is-button.is-default.is-small {
   display: none;
 }
 
-//.amp-row-padding span{
-//  min-height: 10px;
-//}
+.editor-styles-wrapper [data-block] {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
